--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -584,7 +584,7 @@
                   <h5 class="card-title">Puntos Verdes <span>/Ecuador</span></h5>
                   <!-- Line Chart -->
                   <div id="reportsChart"></div>
-                  <app-green-points-map></app-green-points-map>
+                  <app-pg-puntosverdes></app-pg-puntosverdes>
                   
                   <!-- End Line Chart -->
 
