--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -62,7 +62,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="/login">Ingresar</a></li>
-          <li><a class="getstarted scrollto" href="/registro">Comenzar</a></li>
+          <li><a class="getstarted scrollto" href="/registro">Regístrate!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
