--- a/src/app/Template/pg-recuperar/pg-recuperar.component.html
+++ b/src/app/Template/pg-recuperar/pg-recuperar.component.html
@@ -1,17 +1,3 @@
-<!--
-<form (ngSubmit)="login()">
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required>
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" [(ngModel)]="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-  </form>
--->
-  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Login - GreenPoint</title>
+  <title> Recuperacion - GreenPoint</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,25 +17,6 @@
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
-   -->
-  <!-- Template Main CSS File 
-  <link href="assets/css/style.css" rel="stylesheet">
-  -->
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Updated: Apr 20 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -73,11 +40,11 @@
                   <div class="card-body">
     
                     <div class="pt-4 pb-2" >
-                      <h5 class="card-title text-center pb-0 fs-4" style="margin-top: -30px;">Iniciar sesión en GreenPoint</h5>
-                      <p class="text-center small" style="font-size: 13px;">Ingrese su correo y contraseña para acceder</p>
+                      <h5 class="card-title text-center pb-0 fs-4" style="margin-top: -30px;">Recuperación de cuenta</h5>
+                      <p class="text-center small" style="font-size: 13px;">Ingrese su correo para el envio del codigo</p>
                     </div>
     
-                    <form #form="ngForm" (ngSubmit)="login(form)" class="row g-3 needs-validation" novalidate>
+                    <form #form="ngForm" *ngIf="paso === 1" (ngSubmit)="recuperar(form)" class="row g-3 needs-validation" novalidate>
     
                       <div class="col-12 form-group">
                         <label for="email" class="form-label" style="font-size: 14px;">Correo electrónico</label>
@@ -87,37 +54,57 @@
                           <div class="invalid-feedback floating-invalid-feedback">Ingrese su correo electrónico.</div>
                         </div>
                       </div>
-    
-                      <div class="col-12 form-group" style="margin-top: -10px;">
-                        <label for="password" class="form-label" style="font-size: 14px;">Contraseña</label>
-                        <input type="password" name="password" [(ngModel)]="password" class="form-control" id="password" required style="font-size: 13px;">
-                        <div class="invalid-feedback floating-invalid-feedback">Ingrese su contraseña!</div>
-                      </div>
-    
-                      <div class="col-12 form-group" style="margin-top: -10px;">
-                        <div class="form-check">
-                          <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                          <label class="form-check-label" for="rememberMe" style="font-size: 12px;">Recuerdame</label>
-                        </div>
-                      </div>
-                      <div class="col-12" style="margin-top: -10px;">
-                        <button class="btn btn-primary w-100" type="submit">Iniciar Sesión</button>
+                      <div class="col-12" style="margin-top: 10px;">
+                        <button class="btn btn-primary w-100" type="submit" >Enviar código</button>
                       </div>
                       <div class="col-12" style="margin-top: -5px; margin-bottom: -30px;" >
-                        <a href="/recuperar" style="font-size: 13px;" >¿Olvidaste tu contraseña?</a>
                         <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora!</a></p>
                       </div>
+
+
+                      <p-dialog
+                      header="Nuevo"
+                      [(visible)]="visibleNuevo"
+                      [modal]="true"
+                      [style]="{ width: '25vw' }"
+                      [draggable]="false"
+                      [resizable]="false"
+                    >
+                    <ng-template pTemplate="header">
+                      <span class="small mb-0 font-bold" style="font-size: 17px;">Ingresa el codigo enviado a tu correo (duración 1h)</span>
+                    </ng-template>
+                    <ng-template pTemplate="content">
+                      <div class="p-inputgroup">
+                        <span class="p-inputgroup-addon">
+                            <i class="pi pi-pencil"></i>
+                        </span>
+                        <input pInputText placeholder="Codigo" [(ngModel)]="email" class="p-inputtext-sm" (input)="email = email"/>
+                      </div>
+                      <div class="p-inputgroup" style="margin-top: 15px;">
+                        <span class="p-inputgroup-addon">
+                            <i class="pi pi-pencil"></i>
+                        </span>
+                        <input pInputText placeholder="Codigo" [(ngModel)]="email" class="p-inputtext-sm" (input)="email = email"/>
+                      </div>
+                    </ng-template>
+                    
+                    <ng-template pTemplate="footer">
+                      <p-button icon="pi pi-save"  label="Registrar" styleClass="p-button-sm" (click)="onSubmit()"></p-button>
+                    </ng-template>
+                    
+                    </p-dialog>
+
+
                     </form>
-    
                   </div>
                 </div>
-    
               </div>
             </div>
           </div>
         </div>
       </section>
     </div>
+    
     <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
   </main><!-- End #main -->
 
@@ -139,4 +126,3 @@
 </body>
 
 </html>
-  
