--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -1,17 +1,3 @@
-<!--
-<form (ngSubmit)="login()">
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required>
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" [(ngModel)]="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-  </form>
--->
-  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -87,11 +73,17 @@
                           <div class="invalid-feedback floating-invalid-feedback">Ingrese su correo electrónico.</div>
                         </div>
                       </div>
-    
+                      <!--
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <label for="password" class="form-label" style="font-size: 14px;">Contraseña</label>
                         <input type="password" name="password" [(ngModel)]="password" class="form-control" id="password" required style="font-size: 13px;">
                         <div class="invalid-feedback floating-invalid-feedback">Ingrese su contraseña!</div>
+                      </div>
+                      -->
+                      <div class="col-12 form-group" style="margin-top: -10px;">
+                        <label for="password" class="form-label" style="font-size: 14px;">Contraseña</label>
+                        <input minlength="8" maxlength="16" pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,16}$" type="password" name="password" [(ngModel)]="password" class="form-control" id="password" required style="font-size: 13px;">
+                        <div class="invalid-feedback floating-invalid-feedback">Contraseña incorrecta!</div>
                       </div>
     
                       <div class="col-12 form-group" style="margin-top: -10px;">
