--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -222,7 +222,8 @@
         </div>
       </section>
     </div>
-    
+  
+  <p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
   <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 
   </main><!-- End #main -->
