--- a/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
+++ b/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
@@ -34,6 +34,13 @@
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
+            <span>&nbsp;Administradores</span>
+        </ng-template>
+        <app-pg-administradores></app-pg-administradores>
+    </p-tabPanel>
+    <p-tabPanel header="Header III">
+        <ng-template pTemplate="header">
+            <i class="pi pi-cog"></i>
             <span>&nbsp;Tipo Voluntario</span>
            
         </ng-template>
