--- a/src/app/ModuloAdministracion/pg-oferta/pg-oferta.component.html
+++ b/src/app/ModuloAdministracion/pg-oferta/pg-oferta.component.html
@@ -1,7 +1,7 @@
 <div class="card separador-componentes">
     <p-toolbar>
       <div class="p-toolbar-group-center">
-        <p>INFORMACIÓN NEGOCIOS</p>
+        <p>INFORMACIÓN OFERTAS</p>
       </div>
       <div class="p-toolbar-group-end">
         <p-button
@@ -26,22 +26,43 @@
       <ng-template pTemplate="header">
         <tr>
           <th >#</th>
-          <th pSortableColumn="code" >
-            VALOR <p-sortIcon field="code"></p-sortIcon>
+          <th >
+            Descripcion <p-sortIcon></p-sortIcon>
           </th>
-  
-          <th >ESTADO</th>
-          <th >ACCIONES</th>
+          <th pSortableColumn="coin">
+            Green Coins Necesarios<p-sortIcon field="coin"></p-sortIcon>
+          </th>
+          <th pSortableColumn="neg">
+            Negocio
+            <p-sortIcon field="neg"></p-sortIcon>
+          </th>
+          <th pSortableColumn="fec_ini">
+            Fecha de Inicio
+            <p-sortIcon field="fec_ini"></p-sortIcon>
+          </th>
+          <th pSortableColumn="fec_fin">
+            Fecha de Finalizacion
+            <p-sortIcon field="fec_fin"></p-sortIcon>
+          </th>
+          <th pSortableColumn="est">
+            Estado
+            <p-sortIcon field="est"></p-sortIcon>
+          </th>
+          <th >ACCIONES </th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-customer>
-        <tr>
-          <td>{{ customer.id_dimension }}</td>
-          <td>{{ customer.int_valor }}</td>
+        <tr>          
+          <td>{{ customer.ofertas_id }}</td>
+          <td>{{ customer.descripcion }}</td>
+          <td>{{ customer.gc_necesarios }}</td>
+          <td>{{ customer.negocio }}</td>
+          <td>{{ customer.fecha_inicio }}</td>
+          <td>{{ customer.fecha_fin }}</td>
           <td>
           
-            <p-tag *ngIf="customer.bl_estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
-            <p-tag *ngIf="customer.bl_estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
+            <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
+            <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
            
           <td>
             <p-button
@@ -72,14 +93,53 @@
     [resizable]="false"
   >
   <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Nuevo</span>
+    <span class="text-xl font-bold">Nueva Oferta</span>
   </ng-template>
   <ng-template pTemplate="content">
     <div class="p-inputgroup">
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
       </span>
-      <input pInputText placeholder="Valor" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
+      <input pInputText placeholder="Descripcion" [(ngModel)]="descripcion" class="p-inputtext-sm" (input)="descripcion = descripcion" required/>
+    </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <input pInputText placeholder="Green Coins Necesarios" [(ngModel)]="gc_necesarios" class="p-inputtext-sm" (input)="gc_necesarios = gc_necesarios" required/>
+    </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <select name="" id="">
+        <option value="">Elegir el Negocio</option>
+        <option value="1">Negocio 1</option>
+      </select>
+    </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <input type="date" placeholder="Fecha de inicio" [(ngModel)]="fecha_inicio" class="p-inputtext-sm" (input)="fecha_inicio = fecha_inicio" [min]="minDate" required/>
+      <div class="invalid-feedback floating-invalid-feedback">Ingresa una fecha de inicio válida.</div>
+    </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <input type="date" placeholder="Fecha de Finalizacion" [(ngModel)]="fecha_fin" class="p-inputtext-sm" (input)="fecha_fin = fecha_fin" required/>
+    </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <input pInputText placeholder="Descripcion" [(ngModel)]="descripcion" class="p-inputtext-sm" (input)="descripcion = descripcion"/>
     </div>
   </ng-template>
   
