--- a/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
+++ b/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
@@ -1,10 +1,34 @@
 <p-menubar >
     <ng-template pTemplate="start">
         <p-avatar image="/assets/img/gp.ico" shape="circle" />
+        <a href="/dashadmin/principaladmin" class="logo d-flex align-items-center">
+          <span class="d-none d-lg-block">GreenPoint</span>
+        </a>
+        <i class="bi bi-list toggle-sidebar-btn" (click)="toggleSidebar()"></i>
     </ng-template>
   <ng-template pTemplate="end">
   
-    <p-avatar image="https://icones.pro/wp-content/uploads/2021/02/icone-utilisateur-vert.png" class="mr-2" shape="circle" />
-   
-</ng-template>
+      <a class="nav-link nav-profile d-flex align-items-center pe-0" (click)="toggleMenu('profile', $event)" role="button">
+        <p-avatar image="assets/img/profile-img.jpg" class="mr-2" shape="circle" />
+        <span class="d-none d-md-block dropdown-toggle ps-2">Administrador</span>
+      </a>
+      <!-- End Profile Image Icon -->
+    
+      <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile" *ngIf="menus['profile']" style="right: 15px !important; top: 45px !important;">
+        <li class="dropdown-header">
+          <span>Administrador</span>
+        </li>
+
+        <li>
+          <hr class="dropdown-divider">
+        </li>
+        <li *ngIf="authService.isAuthenticated()">
+          <a (click)="logout()" class="dropdown-item d-flex align-items-center" role="button">
+            <i class="bi bi-box-arrow-right"></i>
+            <span>Cerrar Sesión</span>
+          </a>
+        </li>
+      </ul>
+      <!-- End Profile Dropdown Items -->
+  </ng-template>
 </p-menubar>
